--- a/perflex-master/index.html
+++ b/perflex-master/index.html
@@ -5,12 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>title</title>
     <link rel="stylesheet" href="css/style.min.css">
-    <script src="js/libs.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/js/libs.min.js"></script>
+    <script src="/js/main.js"></script>
   </head>
   <body>
     <div id="cnt">
       <div class="page-content">
+        <div class="page-nav">
+          <div class="new-container">
+            <div class="tabs"><a class="tab" href="#">Обучение</a><a class="tab" href="#">Индивидуальное обучение</a><a class="tab active" href="#">Мастер-класс</a></div>
+          </div>
+        </div>
         <div class="new-container">
           <section class="promo">
             <div class="datatime">
@@ -29,72 +34,91 @@
             <div class="title">Программа курса</div>
             <div class="program-lists">
               <ul class="program-list">
-                <li class="program-item wow animate__animated animate__fadeInLeft" data-wow-delay="1s">Выбор инструментов для обработки и полировки</li>
-                <li class="program-item wow animate__animated animate__fadeInLeft" data-wow-delay="1.5s">Особенности изготовления съемных конструкций из полиамида на примере термопластичных материалов</li>
-                <li class="program-item wow animate__animated animate__fadeInLeft" data-wow-delay="2s">Точный расчет необходимого количества материалов</li><span class="border wow animate__animated animate__fadeInUp"></span>
+                <li class="program-item wow animate__animated animate__fadeInLeft" data-wow-delay="0.5s">Выбор инструментов для обработки и полировки</li>
+                <li class="program-item wow animate__animated animate__fadeInLeft" data-wow-delay="0.3s">Особенности изготовления съемных конструкций из полиамида на примере термопластичных материалов</li>
+                <li class="program-item wow animate__animated animate__fadeInLeft" data-wow-delay="0.6s">Точный расчет необходимого количества материалов</li><span class="border wow animate__animated animate__fadeInUp"></span>
               </ul>
               <ul class="program-list">
-                <li class="program-item wow animate__animated animate__fadeInLeft" data-wow-delay="1s">Виды и возможности перебазировки</li>
-                <li class="program-item wow animate__animated animate__fadeInLeft" data-wow-delay="1.5s">Разбор ошибок при изготовлении конструкций из термопластичных материалов </li>
-                <li class="program-item wow animate__animated animate__fadeInLeft" data-wow-delay="2s">Починки и поломки. Границы протеза</li><span class="border wow animate__animated animate__fadeInUp"></span>
+                <li class="program-item wow animate__animated animate__fadeInLeft" data-wow-delay="0.5s">Виды и возможности перебазировки</li>
+                <li class="program-item wow animate__animated animate__fadeInLeft" data-wow-delay="0.3s">Разбор ошибок при изготовлении конструкций из термопластичных материалов </li>
+                <li class="program-item wow animate__animated animate__fadeInLeft" data-wow-delay="0.6s">Починки и поломки. Границы протеза</li><span class="border wow animate__animated animate__fadeInUp"></span>
               </ul>
             </div>
           </section>
           <section class="profit">
-            <h2 class="title">Посетив мастер-класс вы получаете</h2>
+            <h2 class="title">Посетив мастер-класс<br>вы получаете</h2>
             <ul class="profit-list">
-              <li class="profit-item profit-item--actual"><span class="profit-icon button hvr-pulse-grow"></span><span class="profit-item-title">Актуальные знания по вопросам протезирования</span></li>
-              <li class="profit-item profit-item--repair-skill"><span class="profit-icon button hvr-pulse-grow"></span><span class="profit-item-title">Навыки починки зубных протезов</span></li>
-              <li class="profit-item profit-item--present"><span class="profit-icon button hvr-pulse-grow"></span><span class="profit-item-title">Материал Perflex в подарок</span></li>
-              <li class="profit-item profit-item--certificate"><span class="profit-icon button hvr-pulse-grow"></span><span class="profit-item-title">Именной сертификат</span></li>
-              <li class="profit-item profit-item--consult"><span class="profit-icon button hvr-pulse-grow"></span><span class="profit-item-title">Консультацию и ответы на вопросы</span></li>
-              <li class="profit-item profit-item--model"><span class="profit-icon button hvr-pulse-grow"></span><span class="profit-item-title">Готовую модель зубного протеза</span></li>
+              <li class="profit-item profit-item--actual"><span class="profit-icon button hvr-pulse-grow"></span><span class="profit-item-title">Актуальные знания<br>по вопросам<br>протезирования</span></li>
+              <li class="profit-item profit-item--consult"><span class="profit-icon button hvr-pulse-grow"></span><span class="profit-item-title">Консультацию<br>и ответы на<br>вопросы</span></li>
+              <li class="profit-item profit-item--present"><span class="profit-icon button hvr-pulse-grow"></span><span class="profit-item-title">Материал<br>Perflex в<br>подарок</span></li>
+              <li class="profit-item profit-item--certificate"><span class="profit-icon button hvr-pulse-grow"></span><span class="profit-item-title">Именной<br>сертификат</span></li>
+              <li class="profit-item profit-item--repair-skill"><span class="profit-icon button hvr-pulse-grow"></span><span class="profit-item-title">Навыки починки<br>зубных протезов</span></li>
+              <li class="profit-item profit-item--model"><span class="profit-icon button hvr-pulse-grow"></span><span class="profit-item-title">Готовую модель<br>зубного протеза</span></li>
             </ul>
           </section>
         </div>
         <section class="sign-up">
-          <h2 class="title">Записаться на мастер-класс</h2>
+          <!-- h2.title Записаться на мастер-класс-->
           <section class="information">
             <div class="teacher">
-              <div class="name">Александрова<br>Жанна Олеговна</div>
               <div class="present-text">Мастер-класс проводит</div>
-              <!-- .present-text Ведущий мастер-класса-->
+              <div class="name">Александрова<br>Жанна Олеговна</div>
               <ul class="grades">
-                <li class="grade">Эксперт по термопластичным материалам</li>
-                <li class="grade">Сертифицированный консультант компании ООО «Перфлекс Рус»</li>
-                <li class="grade">Действующий зубной техник со стажем работы и опытом обучения более 27 лет</li>
+                <li class="grade">Эксперт по <br>термопластичным <br>материалам</li>
+                <li class="grade">Сертифицированный <br>консультант компании <br>ООО «Перфлекс Рус»</li>
+                <li class="grade">Действующий зубной техник <br>со стажем работы и опытом <br>обучения более 27 лет</li>
               </ul>
             </div>
             <div class="prices">
-              <!-- .rates-title Стоимость курса-->
-              <div class="rates-title">Выбрать курс</div>
+              <div class="rates-title">Стоимость участия</div>
               <ul class="rates">
-                <li class="rate"><span class="cost">5000 р.</span><span class="description">Для слушателей</span></li>
-                <li class="rate"><span class="cost">8000 р.</span><span class="description">Для участников</span></li>
-                <li class="rate"><span class="cost">10000 р.</span><span class="description">Для организаций</span></li>
+                <li class="rate"><span class="cost">5000 р</span><span class="description">Для слушателей</span></li>
+                <li class="rate"><span class="cost">8000 р</span><span class="description">Для практиков</span></li>
+                <li class="rate"><span class="cost">10000 р</span><span class="description">Для организаций</span></li>
               </ul>
             </div>
           </section>
-          <section class="form">
-            <form class="sign-up-form" method="POST" action="#">
-              <div class="form-title">Количество участников ограничено!</div>
-              <div class="input" type="hidden" name="study-type"></div>
-              <div class="fields">
-                <div class="field-box">
-                  <input class="field" type="text" placeholder="ФИО *">
-                </div>
-                <div class="field-box">
-                  <input class="field" type="text" placeholder="Ваш номер телефона *">
-                </div>
-                <div class="field-box">
-                  <input class="field" type="text" placeholder="Введите символы с картинки *">
-                </div>
-                <div class="submit-box">
-                  <input class="submit" type="submit" value="Записаться">
+          <section class="gallery">
+            <div class="swiper-box">
+              <div class="swiper mySwiper">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide"><img src="https://swiperjs.com/demos/images/nature-1.jpg"><span class="subtitle">Мастер класс по пилингу, Москва 2012</span></div>
+                  <div class="swiper-slide"><img src="https://swiperjs.com/demos/images/nature-2.jpg"><span class="subtitle">Мастер класс по пилингу, Москва 2012</span></div>
+                  <div class="swiper-slide"><img src="https://swiperjs.com/demos/images/nature-3.jpg"><span class="subtitle">Мастер класс по пилингу, Москва 2012</span></div>
+                  <div class="swiper-slide"><img src="https://swiperjs.com/demos/images/nature-4.jpg"><span class="subtitle">Мастер класс по пилингу, Москва 2012</span></div>
+                  <div class="swiper-slide"><img src="https://swiperjs.com/demos/images/nature-5.jpg"><span class="subtitle">Мастер класс по пилингу, Москва 2012</span></div>
                 </div>
               </div>
-              <div class="address"><span>ул. Огородный проезд, 20, стр. 4</span><span>м. улица Милашенкова, Фонвизинская, Бутырская</span></div>
-            </form>
+              <div class="controls">
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+              </div>
+              <div class="swiper-pagination"></div>
+            </div>
+          </section>
+          <section class="form">
+            <div class="new-container">
+              <form class="sign-up-form" method="POST" action="#">
+                <div class="form-offer">Записаться на мастер-класс</div>
+                <div class="form-title">Количество участников <br>ограничено!</div>
+                <div class="input" type="hidden" name="study-type"></div>
+                <div class="fields">
+                  <div class="field-box">
+                    <input class="field" type="text" placeholder="Ваше имя *" data-placeholder="Ваше имя *">
+                  </div>
+                  <div class="field-box">
+                    <input class="field" type="text" placeholder="Ваш номер телефона *" data-placeholder="Ваш номер телефона *">
+                  </div>
+                  <div class="field-box">
+                    <input class="field" type="text" placeholder="Введите символы с картинки *" data-placeholder="Введите символы с картинки *">
+                  </div>
+                  <div class="submit-box">
+                    <input class="submit" type="submit" value="Записаться">
+                  </div>
+                </div>
+                <div class="address"><span>ул. Огородный проезд, 20, стр. 4</span><span>м. улица Милашенкова, Фонвизинская, Бутырская</span><span class="phone">телефон: 8 (495) 780-60-80</span></div>
+              </form>
+            </div>
           </section>
         </section>
       </div>
