--- a/perflex-master/index.html
+++ b/perflex-master/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>title</title>
     <link rel="stylesheet" href="css/style.min.css">
-    <script src="/js/libs.min.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="js/libs.min.js"></script>
+    <script src="js/main.js"></script>
   </head>
   <body>
     <div id="cnt">
