--- a/perflex-master/index.html
+++ b/perflex-master/index.html
@@ -116,7 +116,7 @@
                     <input class="submit" type="submit" value="Записаться">
                   </div>
                 </div>
-                <div class="address"><span>ул. Огородный проезд, 20, стр. 4</span><span>м. улица Милашенкова, Фонвизинская, Бутырская</span><span class="phone">телефон: 8 (495) 780-60-80</span></div>
+                <div class="address"><span>метро Улица Милашенкова, Фонвизинская</span><span>Огородный проезд, 20, стр. 4</span><span class="phone">телефон: 8 (495) 780-60-80</span></div>
               </form>
             </div>
           </section>
